# Face-Recognition

./: README.md  build_output.txt  cmake_export_compile_commands.txt
assets/: labels.csv
docs/: CONFUSION_MATRIX_ANALYSIS.md  REQUIREMENTS.md  architecture.md  demo_guide.md
logs/: event_log.csv
scripts/: build.sh  install_dependencies.sh  run.sh  train.sh
src/: CMakeLists.txt  sistema_final.cpp  train_model.cpp
tests/: latency.md
